Removed old mock data from render file

--- a/pabutools/visualisation/templates/mes_template.html
+++ b/pabutools/visualisation/templates/mes_template.html
@@ -298,7 +298,7 @@
                                     </div>
                                  </div>
                               </div>
-                        </div> #}
+                        </div>
                      </div>
 
                      <a class="carousel-control-prev" href="#secondCarousel" role="button" data-slide="prev">
@@ -755,272 +755,6 @@
         {% endfor %}
     {% endfor %}
 
-    {# <!-- Pie Chart (Carousels) (OLD) -->
-    <script>
-        //   ZC.LICENSE = ["569d52cefae586f634c54f86dc99e6a9", "b55b025e438fa8a98e32482b5f768ff5"];
-        var myConfig = {
-            "type": "pie",
-            "title": {
-                "text": "Project B Voters"
-            },
-            "legend": {
-                "toggle-action": "remove",
-                "toggle-action": "remove",
-                "layout": "x2", // Arrange the legend items horizontally
-                "align": "center", // Align the legend items in the center
-                "vertical-align": "bottom",
-            },
-            "plot": {
-                "valueBox": {
-                    "visible": true, // Make value labels visible
-                    "type": 'all', // Show all value text including percentages and absolute values
-                    "placement": 'in', // Position the valueBox outside of the slice
-                    "text": "%v", // Display the absolute value
-                    "fontSize": 10 // Adjust font size as needed
-                },
-                "animation": {
-                    "effect": "ANIMATION_EXPAND_VERTICAL",
-                    "sequence": "ANIMATION_BY_PLOT",
-                    "speed": 0
-                }
-            },
-            "series": [{
-                "values": [65],
-                "text": "A Voters",
-            }, {
-                "values": [30],
-                "text": "Non A-Voters",
-            }]
-        };
-
-        zingchart.render({
-            id: 'myPieChart1A',
-            data: myConfig,
-            height: 300,
-            width: "100%"
-        });
-    </script>
-    <script>
-        //   ZC.LICENSE = ["569d52cefae586f634c54f86dc99e6a9", "b55b025e438fa8a98e32482b5f768ff5"];
-        var myConfig = {
-            "type": "pie",
-            "title": {
-                "text": "Project C Voters"
-            },
-            "legend": {
-                "toggle-action": "remove",
-                "toggle-action": "remove",
-                "layout": "x2", // Arrange the legend items horizontally
-                "align": "center", // Align the legend items in the center
-                "vertical-align": "bottom",
-            },
-            "plot": {
-                "valueBox": {
-                    "visible": true, // Make value labels visible
-                    "type": 'all', // Show all value text including percentages and absolute values
-                    "placement": 'in', // Position the valueBox outside of the slice
-                    "text": "%v", // Display the absolute value
-                    "fontSize": 10 // Adjust font size as needed
-                },
-                "animation": {
-                    "effect": "ANIMATION_EXPAND_VERTICAL",
-                    "sequence": "ANIMATION_BY_PLOT",
-                    "speed": 0
-                }
-            },
-            "series": [{
-                "values": [60],
-                "text": "A Voters",
-            }, {
-                "values": [40],
-                "text": "Non-A Voters",
-            }]
-        };
-
-        zingchart.render({
-            id: 'myPieChart1B',
-            data: myConfig,
-            height: 300,
-            width: "100%"
-        });
-    </script>
-    <script>
-        // ZC.LICENSE = ["569d52cefae586f634c54f86dc99e6a9", "b55b025e438fa8a98e32482b5f768ff5"];
-        var myConfig = {
-            "type": "pie",
-            "title": {
-                "text": "Project D Voters"
-            },
-            "plot": {
-                "valueBox": {
-                    "visible": true, // Make value labels visible
-                    "type": 'all', // Show all value text including percentages and absolute values
-                    "placement": 'in', // Position the valueBox outside of the slice
-                    "text": "%v", // Display the absolute value
-                    "fontSize": 10 // Adjust font size as needed
-                },
-                "animation": {
-                    "effect": "ANIMATION_EXPAND_VERTICAL",
-                    "sequence": "ANIMATION_BY_PLOT",
-                    "speed": 0
-                }
-            },
-            "legend": {
-                "toggle-action": "remove",
-                "layout": "x2", // Arrange the legend items horizontally
-                "align": "center", // Align the legend items in the center
-                "vertical-align": "bottom",
-            },
-            "series": [{
-                "values": [30],
-                "text": "A Voters",
-            }, {
-                "values": [70],
-                "text": "Non-A Voters",
-            }]
-        };
-
-        zingchart.render({
-            id: 'myPieChart1C',
-            data: myConfig,
-            height: 300,
-            width: "100%"
-        });
-    </script> #}
-
-
-    {# <!-- Pie Chart (Carousels) (OLD) -->
-    <script>
-        //   ZC.LICENSE = ["569d52cefae586f634c54f86dc99e6a9", "b55b025e438fa8a98e32482b5f768ff5"];
-        var myConfig = {
-            "type": "pie",
-            "title": {
-                "text": "Project A vs Project B"
-            },
-            "legend": {
-                "toggle-action": "remove",
-                "toggle-action": "remove",
-                "layout": "x2", // Arrange the legend items horizontally
-                "align": "center", // Align the legend items in the center
-                "vertical-align": "bottom",
-            },
-            "plot": {
-                "valueBox": {
-                    "visible": true, // Make value labels visible
-                    "type": 'all', // Show all value text including percentages and absolute values
-                    "placement": 'in', // Position the valueBox outside of the slice
-                    "text": "%v", // Display the absolute value
-                    "fontSize": 10 // Adjust font size as needed
-                },
-                "animation": {
-                    "effect": "ANIMATION_EXPAND_VERTICAL",
-                    "sequence": "ANIMATION_BY_PLOT",
-                    "speed": 0
-                }
-            },
-            "series": [{
-                "values": [60],
-                "text": "Project A",
-            }, {
-                "values": [40],
-                "text": "Project B",
-            }]
-        };
-
-        zingchart.render({
-            id: 'myPieChart2A',
-            data: myConfig,
-            height: 300,
-            width: "100%"
-        });
-    </script>
-    <script>
-        //   ZC.LICENSE = ["569d52cefae586f634c54f86dc99e6a9", "b55b025e438fa8a98e32482b5f768ff5"];
-        var myConfig = {
-            "type": "pie",
-            "title": {
-                "text": "Project A vs Project D"
-            },
-            "legend": {
-                "toggle-action": "remove",
-                "toggle-action": "remove",
-                "layout": "x2", // Arrange the legend items horizontally
-                "align": "center", // Align the legend items in the center
-                "vertical-align": "bottom",
-            },
-            "plot": {
-                "valueBox": {
-                    "visible": true, // Make value labels visible
-                    "type": 'all', // Show all value text including percentages and absolute values
-                    "placement": 'in', // Position the valueBox outside of the slice
-                    "text": "%v", // Display the absolute value
-                    "fontSize": 10 // Adjust font size as needed
-                },
-                "animation": {
-                    "effect": "ANIMATION_EXPAND_VERTICAL",
-                    "sequence": "ANIMATION_BY_PLOT",
-                    "speed": 0
-                }
-            },
-            "series": [{
-                "values": [65],
-                "text": "Project A",
-            }, {
-                "values": [35],
-                "text": "Project D",
-            }]
-        };
-
-        zingchart.render({
-            id: 'myPieChart2B',
-            data: myConfig,
-            height: 300,
-            width: "100%"
-        });
-    </script>
-    <script>
-        //   ZC.LICENSE = ["569d52cefae586f634c54f86dc99e6a9", "b55b025e438fa8a98e32482b5f768ff5"];
-        var myConfig = {
-            "type": "pie",
-            "title": {
-                "text": "Project A vs Project C"
-            },
-            "plot": {
-                "valueBox": {
-                    "visible": true, // Make value labels visible
-                    "type": 'all', // Show all value text including percentages and absolute values
-                    "placement": 'in', // Position the valueBox outside of the slice
-                    "text": "%v", // Display the absolute value
-                    "fontSize": 10 // Adjust font size as needed
-                },
-                "animation": {
-                    "effect": "ANIMATION_EXPAND_VERTICAL",
-                    "sequence": "ANIMATION_BY_PLOT",
-                    "speed": 0
-                }
-            },
-            "legend": {
-                "toggle-action": "remove",
-                "layout": "x2", // Arrange the legend items horizontally
-                "align": "center", // Align the legend items in the center
-                "vertical-align": "bottom",
-            },
-            "series": [{
-                "values": [80],
-                "text": "Project D",
-            }, {
-                "values": [20],
-                "text": "Project E",
-            }]
-        };
-
-        zingchart.render({
-            id: 'myPieChart2C',
-            data: myConfig,
-            height: 300,
-            width: "100%"
-        });
-    </script> #}
     <script src="https://unpkg.com/@popperjs/core@2"></script>
     <script src="https://unpkg.com/tippy.js@6"></script>
     <script>tippy('[data-tippy-content]', { allowHTML: true, maxWidth: 1000});</script>
