Fixed Effective vote count bar scale

--- a/pabutools/visualisation/templates/mes_round_analysis_template.html
+++ b/pabutools/visualisation/templates/mes_round_analysis_template.html
@@ -515,7 +515,10 @@
                 "scale-y": {
                     "title": {
                         "text": "Votes"
-                    }
+                    },
+                    "min-value": 0, // Set the minimum value to 0
+                    "max-labels": 10, // Optional: Adjust the maximum number of labels displayed
+                    "decimals": 0, // Optional: Adjust the number of decimal places
                 },
                 "series": [{
                     "values":[ 
